--- a/projeto/v13APP/SynesthesiaVision/app/src/main/res/layout/activity_main.xml
+++ b/projeto/v13APP/SynesthesiaVision/app/src/main/res/layout/activity_main.xml
@@ -63,16 +63,6 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/ps"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
         android:id="@+id/total"
         android:layout_alignTop="@+id/textView5"
         android:layout_alignParentRight="true"
@@ -81,7 +71,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Começar"
+        android:text="Iniciar"
         android:id="@+id/button"
         android:onClick="start"
         android:layout_alignParentBottom="true"
@@ -106,5 +96,27 @@
         android:layout_above="@+id/button"
         android:layout_toRightOf="@+id/textView2"
         android:layout_toEndOf="@+id/textView2" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/button"
+        android:id="@+id/ps"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:singleLine="true"
+        android:selectAllOnFocus="false"
+        android:cursorVisible="true" />
+
+    <Button
+        android:text="Definir novo valor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/setValue" />
 
 </RelativeLayout>
