--- a/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/res/layout/activity_main.xml
+++ b/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/res/layout/activity_main.xml
@@ -18,21 +18,6 @@
         android:layout_marginTop="18dp" />
 
     <Button
-        android:text="@string/desconectar"
-        android:id="@+id/button"
-        android:background="@drawable/round_button"
-        android:layout_height="100dp"
-        android:textSize="12sp"
-        android:textColor="@color/background_floating_material_light"
-        android:layout_width="100dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_alignTop="@+id/button_start"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="disconnect"/>
-
-    <Button
         android:text="@string/iniciar"
         android:id="@+id/button_start"
         android:background="@drawable/round_button"
@@ -40,34 +25,77 @@
         android:layout_height="100dp"
         android:textSize="14sp"
         android:textColor="@color/background_floating_material_light"
-        android:layout_marginRight="12dp"
-        android:layout_marginEnd="12dp"
         android:contentDescription="@string/comecar"
         android:layout_weight="0.21"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="15dp" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ico_mic"
-        android:id="@+id/btnSpeak"
-        android:contentDescription="@string/comando_voz"
-        android:layout_marginBottom="14dp"
-        android:layout_above="@+id/button"
-        android:layout_centerHorizontal="true" />
-
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/frequency"
-        android:layout_weight="1"
-        android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="29dp" />
+        android:layout_marginBottom="21dp" />
+
+    <Button
+        android:text="@string/desconectar"
+        android:id="@+id/btn_disconnect"
+        android:background="@drawable/round_button"
+        android:layout_height="100dp"
+        android:textSize="12sp"
+        android:textColor="@color/background_floating_material_light"
+        android:layout_width="100dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_alignTop="@+id/button_start"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2" />
+
+    <Button
+        android:text="Aplicar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView2"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2"
+        android:layout_marginTop="31dp"
+        android:id="@+id/btnOk" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberSigned"
+        android:ems="10"
+        android:layout_alignTop="@+id/btnOk"
+        android:layout_toLeftOf="@+id/btnOk"
+        android:id="@+id/edtTempo"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2" />
+
+    <CheckBox
+        android:text="Direita"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/chkDireita"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <CheckBox
+        android:text="Esquerda"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/chkEsquerda"
+        android:layout_alignBaseline="@+id/chkDireita"
+        android:layout_alignBottom="@+id/chkDireita"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:text="Frente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/chkFrente"
+        android:layout_below="@+id/btnOk"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="19dp" />
 
 
 </RelativeLayout>
