--- a/projeto/V1.3(APP)/SynesthesiaVision/app/src/main/res/layout/activity_main.xml
+++ b/projeto/V1.3(APP)/SynesthesiaVision/app/src/main/res/layout/activity_main.xml
@@ -13,19 +13,18 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
         android:layout_weight="1"
-        android:text="@string/frequencia"
+        android:text="frequencia"
         android:textAlignment="center"
         android:textSize="20sp" />
 
     <Button
-        android:text="@string/iniciar"
+        android:text="iniciar"
         android:id="@+id/button_start"
         android:background="@drawable/round_button"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:textSize="14sp"
         android:textColor="@color/background_floating_material_light"
-        android:contentDescription="@string/comecar"
         android:layout_weight="0.21"
         android:layout_marginLeft="18dp"
         android:layout_marginStart="18dp"
@@ -35,7 +34,7 @@
         android:layout_marginBottom="21dp" />
 
     <Button
-        android:text="@string/desconectar"
+        android:text="Desconectar"
         android:id="@+id/btn_disconnect"
         android:background="@drawable/round_button"
         android:layout_height="100dp"
