--- a/projeto/V1.3(APP)/SynesthesiaVision/app/src/main/res/layout/activity_main_2.xml
+++ b/projeto/V1.3(APP)/SynesthesiaVision/app/src/main/res/layout/activity_main_2.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.jonathan.myapplication.MainActivity"
-    tools:showIn="@layout/app_bar_main"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
@@ -15,31 +13,33 @@
         android:layout_width="145dp"
         android:layout_height="78dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:background="@android:color/holo_blue_light"
         android:text="Weather"
         android:textColor="@android:color/background_light"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="33dp"
         app:layout_constraintTop_toBottomOf="@+id/btnStart"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1" />
 
     <Button
         android:id="@+id/btnDisconnect"
         android:layout_width="145dp"
-        android:layout_height="86dp"
+        android:layout_height="0dp"
         android:text="Disconnect"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/btnStart"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="19dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintVertical_bias="0.555"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1" />
 
     <Button
         android:id="@+id/btnDeacrease"
@@ -50,7 +50,7 @@
         android:text="Decrease"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -65,7 +65,7 @@
         android:text="Increase"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/btnDeacrease"
         android:layout_marginRight="8dp"
@@ -73,21 +73,23 @@
 
     <Button
         android:id="@+id/btnStart"
-        android:layout_width="241dp"
+        android:layout_width="0dp"
         android:layout_height="99dp"
-        android:text="sTART"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
+        android:text="START"
+        android:layout_marginStart="71dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginLeft="71dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="71dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="107dp"
         app:layout_constraintHorizontal_bias="0.503"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/chkFront"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintVertical_bias="0.75"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <CheckBox
         android:id="@+id/chkLeft"
@@ -96,7 +98,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Left"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/view6"
         android:layout_marginRight="8dp"
@@ -108,16 +110,18 @@
         android:id="@+id/chkFront"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginStart="144dp"
         android:text="Front"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="84dp"
         app:layout_constraintTop_toBottomOf="@+id/txtFrequency"
-        app:layout_constraintLeft_toRightOf="@+id/chkLeft"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/chkRight"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.52" />
+        android:layout_marginLeft="144dp"
+        android:layout_marginRight="144dp"
+        app:layout_constraintHorizontal_bias="0.444"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/chkRight"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/chkLeft" />
 
     <View
         android:layout_width="1dp"
@@ -130,7 +134,9 @@
         app:layout_constraintBottom_toTopOf="@+id/btnStart"
         android:layout_marginLeft="136dp"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:ignore="RtlHardcoded"
+        android:layout_marginStart="136dp" />
 
     <View
         android:id="@+id/view2"
@@ -143,33 +149,34 @@
         app:layout_constraintBottom_toTopOf="@+id/btnStart"
         android:layout_marginRight="127dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginEnd="127dp" />
 
     <View
         android:id="@+id/view5"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@android:color/background_dark"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/view2"
-        android:layout_marginLeft="0dp"
         android:layout_marginTop="101dp"
         app:layout_constraintTop_toBottomOf="@+id/btnDeacrease"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <View
         android:id="@+id/view7"
-        android:layout_width="140dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="101dp"
         android:background="@android:color/background_dark"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/view6"
-        app:layout_constraintTop_toBottomOf="@+id/btnIncrease" />
+        app:layout_constraintTop_toBottomOf="@+id/btnIncrease"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <CheckBox
         android:id="@+id/chkRight"
@@ -178,7 +185,7 @@
         android:layout_marginEnd="6dp"
         android:layout_marginStart="8dp"
         android:text="Right"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="6dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/view2"
         android:layout_marginLeft="8dp"
@@ -191,31 +198,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Frequency"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginEnd="143dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/btnIncrease"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/btnDeacrease"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.507" />
+        android:layout_marginLeft="144dp"
+        android:layout_marginRight="143dp"
+        app:layout_constraintHorizontal_bias="0.507"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/btnDeacrease"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/btnIncrease" />
 
     <TextView
         android:id="@+id/txtFrequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="151dp"
+        android:layout_marginLeft="151dp"
+        android:layout_marginRight="151dp"
+        android:layout_marginStart="151dp"
         android:layout_marginTop="18dp"
         android:text="1/10 Hz"
         android:textAlignment="center"
-        app:layout_constraintLeft_toRightOf="@+id/btnIncrease"
-        app:layout_constraintRight_toLeftOf="@+id/btnDeacrease"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.5" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/btnDeacrease"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/btnIncrease" />
 
     <TextView
         android:id="@+id/txtLeft"
@@ -231,14 +241,15 @@
         app:layout_constraintRight_toLeftOf="@+id/view6"
         android:layout_marginRight="8dp"
         app:layout_constraintHorizontal_bias="0.129"
-        app:layout_constraintVertical_bias="0.545" />
+        app:layout_constraintVertical_bias="0.545"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/txtFront"
         android:layout_width="62dp"
         android:layout_height="19dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="0dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
@@ -247,22 +258,27 @@
         app:layout_constraintLeft_toRightOf="@+id/view6"
         app:layout_constraintRight_toLeftOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/chkFront"
-        app:layout_constraintVertical_bias="0.155" />
+        app:layout_constraintVertical_bias="0.155"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/txtRight"
         android:layout_width="62dp"
         android:layout_height="15dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="18dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintHorizontal_bias="0.836"
         app:layout_constraintLeft_toRightOf="@+id/view2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chkRight"
-        app:layout_constraintVertical_bias="0.411" />
+        app:layout_constraintVertical_bias="0.411"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
